--- a/package.json
+++ b/package.json
@@ -1,14 +1,43 @@
 {
-  "name": "",
+  "name": "pymes-manager",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "bun run --bun astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint",
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "astro": "^5.12.6"
+    "@astrojs/db": "^0.15.1",
+    "@astrojs/solid-js": "^5.1.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "astro": "^5.12.6",
+    "chart.js": "^4.5.0",
+    "solid-chartjs": "^1.3.11",
+    "solid-devtools": "^0.34.3",
+    "solid-icons": "^1.1.0",
+    "solid-js": "^1.9.7",
+    "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "@eslint/css": "^0.10.0",
+    "@eslint/js": "^9.32.0",
+    "@eslint/json": "^0.13.1",
+    "@types/eslint-plugin-jsx-a11y": "^6.10.0",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "eslint": "^9.32.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.5.3",
+    "globals": "^16.3.0",
+    "jiti": "^2.5.1",
+    "prettier": "^3.6.2",
+    "prettier-plugin-astro": "^0.14.1",
+    "typescript-eslint": "^8.38.0"
   }
 }
